--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 1-Prepare_Your_Project/.env.local
+1-Prepare_Your_Project/.DS_Store
 2-Implementing_ORE-ID/.env.local
 2-Implementing_ORE-ID/node_modules
 3-Making_ORE-ID_Available/node_modules
@@ -10,3 +11,8 @@
 5-Log_Out/.env.local
 6-Signing_Transactions/.env.local
 6-Signing_Transactions/node_modules
+
+.DS_Store
+*/.DS_Store
+*/*/.DS_Store
+*/*/*/.DS_Store
