--- a/7-Creating_Custom_Transactions/package.json
+++ b/7-Creating_Custom_Transactions/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@open-rights-exchange/chain-js": "^4.7.1",
+    "@open-rights-exchange/chain-js-plugin-ethereum": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "oreid-js": "4.1.1",
+    "oreid-react": "1.4.1",
+    "oreid-webpopup": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "oreid-js":"4.1.1",
-    "oreid-react": "1.4.1",
-    "oreid-webpopup": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
