--- a/.env.local-example
+++ b/.env.local-example
@@ -1,1 +1,3 @@
 REACT_APP_OREID_APP_ID="t_18c200a7c4ba44e8bd9b15e256628032"
+appid -> t_8211aba897c4443b9fbbdf27cc127200
+api-key —> t_k98b2ae56a16b4b6eaf3e663bdc113972_sk
